scripts/nullaway/wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8.txt
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:128: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:499: error: [NullAway] passing @Nullable parameter 'ja.opt(i)' where @NonNull is required
                b.append(toString(ja.opt(i), (tagName == null) ? "array" : tagName, typed, true));
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:318: error: [NullAway] dereferenced expression bean is @Nullable
        Class klass = bean.getClass();
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:218: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:254: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url675964e2b9_pentaho_pentaho_commons_json_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:294: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
